refactor events - add builders